# studyML

./: .gitignore  hog.py
00-pytorch深度学习/00-pytorch内置resnet预测类别/: demo.py
01-基础函数/: 00-图像预处理.py
03-yolov5实战/: readme.md
04-自制深度学习推理框架/: readme.md
05-mnn/: readme.md
05-mnn/00-LFFD-轻量快速人脸检测/: CMakeLists.txt  readme.md
05-mnn/01-yolo/: README.md
05-mnn/models/: deeplabv3_257_mv_gpu.mnn  imageInputConfig.json  mobilenet_v2_tfpb_train_public_quant.mnn  model_quan.mnn.json
05-mnn/script/: .order  .tempcache  build_ios.sh
06-算子/: t.py
06-算子/01-激活函数/: 01-ReLu.py  02-Sigmoid.py  03-ReLu6.py  04-SiLu.py
06-算子/02-卷积/: 01-conv2d.py  02-多通道conv2d.py  03-1x1_conv2d.py  04-深度可分离conv2d.py  05-空洞卷积.py  conv2d.py  test.txt
06-算子/03-softmax/: 01-softmax.py
06-算子/04-argmax/: 04-argmax.py
06-算子/05-全连接/: 01-全连接.py
06-算子/06-pooling/: 01-maxpooling.py  02-avgpooling.py
06-算子/07-add/: 01-add.py
06-算子/08-cat/: 01-cat.py
06-算子/09-batchnormlize/: 01-BatchNorm2d.py
06-算子/10-transpose/: 01-transpose.py
06-算子/11-损失函数/: 01-交叉熵损失函数.py
07-opencl/: 00-demo.cpp  02-创建上下文.cpp  04-创建程序对象.cpp  demo
07-opencl/00-opencl的世界/: 01-获取设备信息.cpp  03-创建命令队列.cpp  04-创建程序对象.cpp  (+2 more)
07-opencl/03-rgbpacked_to_gray/: 00-图像灰度化.cpp  CMakeLists.txt  rgb2gray.cl
08-SVE/: 00-demo.cpp  demo
12-TensorRT/: readme.md
13-NAS/: readme.md
14-nnp/: 01-demo.cpp
15-onnx/: 01-修改模型输入size.py
SSD-Tensorflow/: Main.py  README.md  ssd300_vgg.py
hogSVM/: get_data.py  hog_feature.py  test.py
ncnn_preproc/: CMakeLists.txt
python/: svm.py  test.py
studyTensorFlow/: gpu_accelerate.py
(+93 files in other folders)
